[package]
name = "threader"
version = "0.1.0"
authors = ["Factorial"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
futures-preview = "0.3.0-alpha.18"
num_cpus = "1.10.1"
mio = "0.6.19"
once_cell = "1.1.0"
lock_api = "0.3.1"
parking_lot = "0.9.0"

[dev-dependencies]
flame = "0.2.2"
