[package]
name = "threader"
version = "0.0.4"
authors = ["Factorial"]
edition = "2018"

categories = ["asynchronous", "concurrency", "network-programming"]
description = "A performant multithreaded future executor and event loop."
license = "MIT"
readme = "README.MD"
repository = "https://www.github.com/27factorial/threader.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
futures = "0.3.0"
mio = "0.6.19"
num_cpus = "1.10.1"
once_cell = "1.1.0"
parking_lot = "0.9.0"

[dev-dependencies]
flame = "0.2.2"